--- a/.github/workflows/aws-iam-role-test.yml
+++ b/.github/workflows/aws-iam-role-test.yml
@@ -16,8 +16,10 @@ jobs:
       - name: 🔑 Configurar IAM Role con GitHub OIDC
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          #role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+          #role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+          role-to-assume: arn:aws:iam::122610492430:role/GitOps_IAMRole
+          aws-region: us-east-1
 
       - name: 🔍 Probar conexión con AWS
         run: |
