--- a/.github/workflows/aws-credentials-test.yml
+++ b/.github/workflows/aws-credentials-test.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1  # Cambia a la región que uses
+          aws-region: ${{ secrets.AWS_REGION_DEV }}  # Usa la región del secreto
 
       - name: 🔍 Probar conexión con AWS
         run: |
