--- a/.github/workflows/aws-credentials-test.yml
+++ b/.github/workflows/aws-credentials-test.yml
@@ -19,6 +19,7 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}  # Usa la región del secreto
+          aws-region: ${{ secrets.AWS_ACCOUNT_ID_DEV }}  # Usa la región del secreto
 
       - name: 🔍 Probar conexión con AWS
         run: |
