--- a/.github/workflows/aws-credentials-test.yml
+++ b/.github/workflows/aws-credentials-test.yml
@@ -19,8 +19,22 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}  # Usa la región del secreto
-          aws-region: ${{ secrets.AWS_ACCOUNT_ID_DEV }}  # Usa la región del secreto
-
+      
+      - name: 🔍 Verificar AWS Account ID
+        run: |
+            ACCOUNT_ID=$(aws sts get-caller-identity --query "Account" --output text)
+            echo "AWS Account ID actual: $ACCOUNT_ID"
+            echo "AWS Account ID esperado: $AWS_ACCOUNT_ID_DEV"
+        
+            if [ "$ACCOUNT_ID" != "$AWS_ACCOUNT_ID_DEV" ]; then
+              echo "❌ ERROR: El usuario está en la cuenta incorrecta ($ACCOUNT_ID). Se esperaba $AWS_ACCOUNT_ID_DEV."
+              exit 1
+            else
+              echo "✅ Validación exitosa: Se está usando la cuenta correcta ($ACCOUNT_ID)."
+            fi
+          env:
+            AWS_ACCOUNT_ID_DEV: ${{ secrets.AWS_ACCOUNT_ID_DEV }}
+            
       - name: 🔍 Probar conexión con AWS
         run: |
           if aws sts get-caller-identity; then
