--- a/.github/workflows/aws-credentials-test.yml
+++ b/.github/workflows/aws-credentials-test.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - main  # O la rama donde quieras probar
-
 jobs:
   aws-test:
     runs-on: ubuntu-latest
@@ -43,3 +42,17 @@ jobs:
             echo "❌ Error al conectar con AWS"
             exit 1
           fi
+          - name: 📦 Instalar dependencias
+          run: |
+            cd apps/aws-cdk-ts
+            npm install
+  
+      - name: 🛠️ Sintetizar plantilla de CloudFormation
+        run: |
+          cd apps/aws-cdk-ts
+          npx cdk synth
+  
+      - name: 🚀 Desplegar infraestructura en AWS
+        run: |
+          cd apps/aws-cdk-ts
+          npx cdk deploy --require-approval never    
