--- a/.github/workflows/aws-credentials-test.yml
+++ b/.github/workflows/aws-credentials-test.yml
@@ -42,7 +42,7 @@ jobs:
             echo "❌ Error al conectar con AWS"
             exit 1
           fi
-          
+
       - name: 📦 Instalar dependencias
         run: |
           cd apps/aws-cdk-ts
@@ -56,4 +56,4 @@ jobs:
       - name: 🚀 Desplegar infraestructura en AWS
         run: |
           cd apps/aws-cdk-ts
-          npx cdk deploy --require-approval never    
+          # npx cdk deploy StorageStack --require-approval never  
