Add Storage cdk

--- a/.github/workflows/aws-credentials-test.yml
+++ b/.github/workflows/aws-credentials-test.yml
@@ -56,4 +56,4 @@ jobs:
       - name: 🚀 Desplegar infraestructura en AWS
         run: |
           cd apps/aws-cdk-ts
-          # npx cdk deploy StorageStack --require-approval never  
+          npx cdk deploy StorageStack --require-approval never  
