--- a/apps/aws-cdk-ts/package.json
+++ b/apps/aws-cdk-ts/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@types/aws-sdk": "^0.0.42",
     "aws-cdk-lib": "2.178.1",
+    "aws-cdk-ts": "file:",
     "aws-sdk": "^2.1692.0",
     "constructs": "^10.0.0"
   }
